force-app/main/default/objects/AccountContact__c/AccountContact__c.object-meta.xml
<CustomObject>
    <label>AccountContact</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>AccountContact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountContacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>